--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,19 +1,20 @@
-server.port=8887
-#server.port=3306
+server.port=80
 server.address=0.0.0.0
 github.client.id=4adb67f3c6fb88caff6c
 github.client.secret=290feda948f46814a6ca2a76d4829560bdae1f61
-github.redirect.uri=http://localhost:8887/callback
-#github.redirect.uri=http://8.130.167.30/callback
+#github.redirect.uri=http://localhost:8887/callback
+github.redirect.uri=http://8.130.167.30/callback
 aliyun.oss.endpoint=https://oss-cn-chengdu.aliyuncs.com
 aliyun.oss.bucketName=memory-garden
 aliyun.ramuser.accesskey.id=LTAI5t5mWNUqCdGG1SeNVCZC
 aliyun.ramuser.accesskey.secret=XJThWwlUQDYoOQ9qTngx8fwBrD467o
 
-spring.datasource.url=jdbc:h2:~/memorygarden
-spring.datasource.username=sa
-spring.datasource.password=123
-spring.datasource.driver-class-name=org.h2.Driver
+#spring.datasource.url=jdbc:h2:~/memorygarden
+spring.datasource.url=jdbc:mysql://8.130.167.30:3306/memorygarden
+spring.datasource.username=root
+spring.datasource.password=123456
+#spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 mybatis.configuration.map-underscore-to-camel-case=true
 mybatis.type-aliases-package=life.lieren,memorygarden.mapper
