--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.datasource.url=jdbc:mysql://8.130.167.30:3306/memorygarden
 spring.datasource.username=root
 spring.datasource.password=123456
 #spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 mybatis.configuration.map-underscore-to-camel-case=true
 mybatis.type-aliases-package=life.lieren,memorygarden.mapper
